<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context="com.example.saksham.overlayscreenshort.View.Activity.HelpActivity">

    <!--play pause with tap-->
    <!--double tap to open app-->
    <!--clear playlist-->
    <!--overlay permission-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:layout_marginBottom="30dp"
        android:layout_margin="15dp"
        android:text="@string/help" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:text="@string/help_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0D3FF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:text="@string/help_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0D3FF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:text="@string/help_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0D3FF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center|left"
            android:text="@string/help_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0D3FF" />


    </LinearLayout>


</LinearLayout>
